# Marksman

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  codeindex.config.json
.github/workflows/: ci.yml  release.yml
crates/ci-arch/: Cargo.toml
crates/ci-arch/src/: lib.rs
crates/ci-build/: Cargo.toml
crates/ci-build/src/: lib.rs  registry.rs
crates/ci-cli/: Cargo.toml
crates/ci-cli/src/: main.rs
crates/ci-conformance/: Cargo.toml
crates/ci-conformance/src/: lib.rs
crates/ci-conformance/tests/: conformance.rs
crates/ci-core/: Cargo.toml
crates/ci-core/src/: config.rs  driver.rs  error.rs  fingerprint.rs  lib.rs  outline.rs  paths.rs  sandbox.rs  text.rs  toolchain.rs  types.rs  weight.rs
crates/ci-edit/: Cargo.toml
crates/ci-edit/src/: actions.rs  apply.rs  composed.rs  lazy_lsp.rs  lib.rs  moves.rs  structured.rs
crates/ci-edit/src/moves/: dotted.rs
crates/ci-embed/: Cargo.toml
crates/ci-embed/src/: lib.rs  static_embedder.rs
crates/ci-index/: Cargo.toml
crates/ci-index/src/: bm25.rs  graph.rs  lib.rs  pb.rs  store.rs  types.rs  vector.rs
crates/ci-lsp/: Cargo.toml
crates/ci-lsp-index/: Cargo.toml
crates/ci-lsp-index/src/: lib.rs
crates/ci-lsp/src/: lib.rs
crates/ci-mcp/: Cargo.toml
crates/ci-mcp/src/: main.rs
crates/ci-proto/: Cargo.toml
crates/ci-proto/src/: lib.rs
crates/ci-providers/: Cargo.toml
crates/ci-providers/src/: lib.rs
crates/ci-retrieve/: Cargo.toml
crates/ci-retrieve/src/: lib.rs  retrieve.rs  rrf.rs
crates/ci-scip/: Cargo.toml
crates/ci-scip/src/: lib.rs
crates/ci-treesitter/: Cargo.toml
crates/ci-treesitter/src/: lib.rs
crates/ci-vfs/: Cargo.toml
crates/ci-vfs/src/: lib.rs
crates/ci-walk/: Cargo.toml
crates/ci-walk/src/: discover.rs  lang.rs  lib.rs  workspace.rs
crates/lang-rust/: Cargo.toml
crates/lang-rust/src/: lib.rs
crates/lang-ts/: Cargo.toml
crates/lang-ts/src/: ast.rs  lib.rs  sidecar.cjs  tsmorph.rs
crates/langs/lang-fallback/: Cargo.toml
crates/langs/lang-fallback/src/: gate.rs  imports.rs  lib.rs  structure.rs
crates/langs/lang-java/: Cargo.toml
crates/langs/lang-java/src/: GateSidecar.java  gate.rs  jdtls.rs  lib.rs  movefix.rs  sidecar.rs
crates/langs/lang-php/: Cargo.toml
crates/langs/lang-php/src/: gate.rs  lib.rs  movefix.rs  phpactor.rs  sidecar.rs
crates/langs/lang-rust/: Cargo.toml
crates/langs/lang-rust/src/: gate.rs  graph.rs  lib.rs  movefix.rs  sidecar.rs  structure.rs  usegraph.rs
crates/langs/lang-rust/tests/: sidecar.rs
crates/langs/lang-swift/: Cargo.toml
crates/langs/lang-swift/src/: gate.rs  lib.rs  movefix.rs  sidecar.rs  sourcekit.rs
crates/langs/lang-template/: Cargo.toml
crates/langs/lang-template/src/: lib.rs
crates/langs/lang-ts/: Cargo.toml
crates/langs/lang-ts/src/: ablation.rs  ast.rs  engine.rs  fingerprint.rs  lib.rs  outline.rs  sidecar.cjs  sidecar.rs  tsmorph.rs
docker/: README.md  marksman-java.Dockerfile  marksman-php.Dockerfile  marksman-rust.Dockerfile  marksman-swift.Dockerfile  marksman-ts.Dockerfile  peashooter-java.Dockerfile  peashooter-php.Dockerfile  peashooter-rust.Dockerfile  peashooter-swift.Dockerfile  peashooter-ts.Dockerfile
docs/: architecture.md  benchmarks.md  code-review-plan.md  container-gate-spec.md  container-guide.md  file-surface-consolidation-spec.md  implementation-consolidation-spec.md  lang-rollout-audit-spec.md  lang-rollout-swift-php-java-spec.md  legacy-benchmark.md  op-surface-consolidation-spec.md  producer-surface-consolidation-spec.md  provider-contract.md  releasing.md  roadmap.md  state.md  test-surface-consolidation-spec.md
docs/eval/: marksman.json
docs/languages/: java.md  php.md  swift.md
scripts/: bench.py  marksman-images.sh  peashooter-images.sh
scripts/agent-bench/: README.md  analyze.py  codeindex-rust.mcp.json  codeindex-ts.mcp.json  go.sh  run.py  tasks.json
scripts/agent-bench/fixture-barrels/: .gitignore  package.json
scripts/agent-bench/fixture-barrels/src/: main.ts
scripts/agent-bench/fixture-barrels/src/api/: admin.ts
scripts/agent-bench/fixture-barrels/src/cli/: config.ts
scripts/agent-bench/fixture-barrels/src/core/: clock.ts  index.ts  policy.ts
scripts/agent-bench/fixture-barrels/src/middleware/: throttle.ts
scripts/agent-bench/fixture-barrels/src/reporting/: usage.ts
scripts/agent-bench/fixture-java/src/main/java/com/corpus/: Dedupe.java  DocEntry.java  EntryKind.java  Query.java  Rank.java  Store.java  Tokenize.java
scripts/agent-bench/fixture-monorepo/: .gitignore  package.json  tsconfig.json
scripts/agent-bench/fixture-multilang/: .gitignore  Cargo.toml  package.json  tsconfig.json
scripts/agent-bench/fixture-multilang/jobs/: rollup.py
scripts/agent-bench/fixture-multilang/src/: lib.rs  stats.rs
scripts/agent-bench/fixture-multilang/tools/: latency.go
scripts/agent-bench/fixture-multilang/web/: client.ts  format.ts
scripts/agent-bench/fixture-php/: .gitignore  composer.json
scripts/agent-bench/fixture-php/src/: Dedupe.php  DocEntry.php  EntryKind.php  Query.php  Rank.php  Store.php  Tokenize.php
scripts/agent-bench/fixture-rust/: .gitignore  Cargo.toml
scripts/agent-bench/fixture-rust/src/: dedupe.rs  lib.rs  query.rs  rank.rs  store.rs  tokenize.rs  types.rs
scripts/agent-bench/fixture-swift/: Package.swift
scripts/agent-bench/fixture-swift/Sources/Corpus/: Dedupe.swift  Query.swift  Rank.swift  Store.swift  Tokenize.swift  Types.swift
scripts/agent-bench/fixture-ts/: package.json  tsconfig.json
scripts/agent-bench/fixture-ts/src/: dedupe.ts  query.ts  rank.ts  store.ts  tokenize.ts  types.ts
scripts/multilang-bench/: .gitignore  run.py
scripts/multilang-bench/fixture/: tsconfig.json
scripts/multilang-bench/fixture/api/: auth.ts  server.ts
scripts/multilang-bench/fixture/jobs/: queue.py  scheduler.py
scripts/multilang-bench/fixture/src/: lexer.rs  parser.rs
