[workspace]
resolver = "2"
members = [
    "crates/ci-core",
    "crates/ci-walk",
    "crates/ci-embed",
    "crates/ci-index",
    "crates/ci-retrieve",
    "crates/ci-scip",
    "crates/ci-proto",
    "crates/ci-build",
    "crates/ci-treesitter",
    "crates/langs/lang-ts",
    "crates/langs/lang-rust",
    "crates/langs/lang-fallback",
    "crates/langs/lang-template",
    "crates/ci-cli",
    "crates/ci-vfs",
    "crates/ci-lsp",
    "crates/ci-edit",
    "crates/ci-arch",
    "crates/ci-mcp",
    "crates/ci-conformance",
]

# Member crates are added here as each phase lands, so `cargo build` stays green.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/d-weg/Marksman"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ignore = "0.4"
globset = "0.4"
tempfile = "3"
toml = "0.8"
# Shared so ci-treesitter and every lang-* crate compile against ONE tree-sitter (a
# `tree_sitter::Node` crosses the ci-treesitter ↔ provider boundary, so the ABI must match).
tree-sitter = "0.26.10"

[profile.release]
lto = true
codegen-units = 1
