[package]
name = "ci-arch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-API folder/architecture map: per-dir file-kind patterns + module templates."

[dependencies]
ci-core = { path = "../ci-core" }
ci-walk = { path = "../ci-walk" }
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true
