[package]
name = "ci-build"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Index build pipeline: walk -> provider.structure -> embed -> BM25 -> import graph -> IndexData."

[dependencies]
ci-core = { path = "../ci-core" }
ci-walk = { path = "../ci-walk" }
ci-index = { path = "../ci-index" }

[dev-dependencies]
tempfile.workspace = true
