[package]
name = "ci-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "codeindex-rs CLI: index + retrieve (TS via SCIP + native Model2Vec)."

[[bin]]
name = "codeindex-rs"
path = "src/main.rs"

[dependencies]
ci-core = { path = "../ci-core" }
ci-embed = { path = "../ci-embed" }
ci-index = { path = "../ci-index" }
ci-retrieve = { path = "../ci-retrieve" }
ci-build = { path = "../ci-build" }
ci-walk = { path = "../ci-walk" }
ci-proto = { path = "../ci-proto" }
lang-ts = { path = "../langs/lang-ts" }
lang-rust = { path = "../langs/lang-rust" }
lang-fallback = { path = "../langs/lang-fallback" }
serde_json.workspace = true
