[package]
name = "ci-edit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atomic gated edits: SCIP node ranges + VFS overlay + LSP baseline-diff gate."

[dependencies]
ci-core = { path = "../ci-core" }
ci-vfs = { path = "../ci-vfs" }
ci-lsp = { path = "../ci-lsp" }
ci-build = { path = "../ci-build" }
ignore = "0.4"
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
