[package]
name = "ci-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model2Vec static embedder (native Rust): tokenizers + safetensors, no ONNX."

[dependencies]
ci-core = { path = "../ci-core" }
tokenizers = "0.20"
safetensors = "0.4"
serde_json.workspace = true
