[package]
name = "ci-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Marksman MCP server (stdio): retrieve_context / describe_architecture / list_anchors / apply_edits."

[[bin]]
name = "marksman-mcp"
path = "src/main.rs"

[dependencies]
ci-core = { path = "../ci-core" }
ci-index = { path = "../ci-index" }
ci-build = { path = "../ci-build" }
ci-embed = { path = "../ci-embed" }
ci-retrieve = { path = "../ci-retrieve" }
ci-arch = { path = "../ci-arch" }
ci-edit = { path = "../ci-edit" }
ci-proto = { path = "../ci-proto" }
lang-ts = { path = "../langs/lang-ts" }
lang-rust = { path = "../langs/lang-rust" }
lang-fallback = { path = "../langs/lang-fallback" }
serde_json.workspace = true
ignore = "0.4"

[dev-dependencies]
tempfile.workspace = true
