[package]
name = "ci-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The one make_provider: language name -> constructed provider, for every Marksman binary."

[dependencies]
ci-core = { path = "../ci-core" }
ci-build = { path = "../ci-build" }
ci-proto = { path = "../ci-proto" }
lang-ts = { path = "../langs/lang-ts" }
lang-rust = { path = "../langs/lang-rust" }
lang-fallback = { path = "../langs/lang-fallback" }
lang-java = { path = "../langs/lang-java" }
lang-php = { path = "../langs/lang-php" }
lang-swift = { path = "../langs/lang-swift" }
