[package]
name = "ci-walk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File discovery (gitignore-aware), language detection, and workspace/package detection."

[dependencies]
ci-core = { path = "../ci-core" }
ignore.workspace = true
globset.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
