[package]
name = "lang-fallback"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic tree-sitter LanguageProvider for languages without a SCIP/LSP integration (Python, JavaScript, Go, Java, Ruby, C, C++). Read path + UNGATED structural edits (gated: false)."

[dependencies]
ci-core = { path = "../../ci-core" }
ci-edit = { path = "../../ci-edit" }
ci-treesitter = { path = "../../ci-treesitter" }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
ignore = "0.4"

[dev-dependencies]
tempfile.workspace = true
