[package]
name = "lang-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust LanguageProvider: in-process tree-sitter (read). v0 = structure + import graph; edits via rust-analyzer on the roadmap."

[dependencies]
ci-core = { path = "../../ci-core" }
ci-edit = { path = "../../ci-edit" }
ci-lsp = { path = "../../ci-lsp" }
ci-proto = { path = "../../ci-proto" }
ci-scip = { path = "../../ci-scip" }
ci-treesitter = { path = "../../ci-treesitter" }
tree-sitter = { workspace = true }
tree-sitter-rust = "0.24"
ignore = "0.4"
serde_json = { workspace = true }

[[bin]]
name = "peashooter-provider-rust"
path = "src/sidecar.rs"

[dev-dependencies]
tempfile.workspace = true
ci-proto = { path = "../../ci-proto" }
