[package]
name = "lang-ts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TypeScript LanguageProvider: SCIP read (scip-typescript) + (P2) LSP/VFS write."

[dependencies]
ci-core = { path = "../../ci-core" }
ci-scip = { path = "../../ci-scip" }
ci-lsp = { path = "../../ci-lsp" }
ci-edit = { path = "../../ci-edit" }
serde_json.workspace = true
tree-sitter = "0.26.10"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile.workspace = true
